--- a/src/styles.css
+++ b/src/styles.css
@@ -1,22 +1,23 @@
 body {
   font-family: sans-serif;
-  padding: 50px;
-  margin: 20px 300px 20px 300px;
+  padding: 20px;
+  margin: 30px auto;
+  max-width: 600px;
   border: 1px solid;
-  border-color: grey
-  margin-left: auto;
-  margin-right: auto;
-  width: 600px;
+  border-color: grey;
+  border-radius: 5px;
   height: 300px;
   box-sizing: border-box;
-  
 }
 
-ul{ margin-top: 30px;}
+ul {
+  margin-top: 30px;
+}
 li {
   list-style-type: none;
-  
 }
 
-p#degrees {margin-top: 30px;
-font-size: 55px;}
+p#degrees {
+  margin-top: 30px;
+  font-size: 55px;
+}
