--- a/src/styles.css
+++ b/src/styles.css
@@ -37,8 +37,9 @@ small {
 .active {
   color: black;
   cursor: default;
+  text-decoration: none !important;
 }
 
 .active:hover {
-  text-decoration: none;
+  text-decoration: none !important;
 }
