--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,8 @@ small {
 .forecast {
   margin-top: 35px;
   text-align: center;
+  font-family: "Nunito Sans", sans-serif;
+  font-weight: bold;
 }
 .forecast-degrees {
   font-size: 16px;
