add background picture

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body {
   border-radius: 10px;
   height: 500px;
   box-sizing: border-box;
-  background-image: url("file:///C:/Users/User/Downloads/sky%20picture.jpg");
+  background-image: url("sky.jpg");
 }
 
 h1 {
