update footer color

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ small {
   position: fixed;
   bottom: 20px;
   font-family: "Nunito Sans", sans-serif;
-  color: black;
+  color: white;
 }
 
 .forecast {
